# sol-plus

./: .gitignore  CLAUDE.md  RATIONALIZATION.md  pyproject.toml
config/: sol.yaml
data/: books  sample_book.json
docs/: architecture.md
scripts/: serve.py
scripts/templates/: dashboard.html
src/: exceptions.py
src/extractors/: __init__.py  biography.py  hadith.py
src/models/: __init__.py
src/phases/: CLAUDE.md  enrich.py  extract.py  graph.py  ingest.py  segment.py
src/utils/: config.py  text.py
tests/phases/: conftest.py  test_extract.py  test_ingest.py  test_segment.py
